# librolegen

./: CMakeLists.txt  Makefile.inc  README.md  oss-pkg-info.yaml
files/pkgconfig/: rolegen.pc.in
include/public/: rolegen.h
src/: rolegen.cpp.in
templates/: JSService.json  NDK.pub  NativeApp.json  NativeService.json  Triton.prv  Triton.pub  WebApp.json
test/securityissues/: CMakeLists.txt  delete_test_role_files.sh  securityissues.cpp
